# cmake-project-template

./: CMakeLists.txt  README.md  vcpkg.json
